# AnconaTemplateGame

./: CMakeLists.txt  Config.txt
Game/: CMakeLists.txt  Config.txt  index.js
Game/Projects/Android/: AndroidManifest.xml  build.gradle
Game/Projects/Android/res/values/: strings.xml
Game/Raft/: raftfile.json
Game/Src/__gameName__/__gameAbbr__Lib/Core/: __gameAbbr__AndroidFactory.cpp  __gameAbbr__DesktopFactory.cpp  __gameAbbr__DesktopFactory.hpp  __gameAbbr__PlatformFactory.hpp
Game/Src/__gameName__/__gameAbbr__Lib/Factories/: PlayerFactory.cpp  PlayerFactory.hpp
Game/Src/__gameName__/__gameAbbr__Lib/Input/: GameKeyboardAndMouse.cpp  GameKeyboardAndMouse.hpp  GameTouch.cpp  GameTouch.hpp  __gameAbbr__InputHandler.cpp  __gameAbbr__InputHandler.hpp
Game/Src/__gameName__/__gameAbbr__Lib/Screens/: TestScreen.cpp
Game/Src/__gameName__/__gameAbbr__Lib/Systems/: RotateDecelerationSystem.cpp  RotateDecelerationSystem.hpp  __gameAbbr__GameSystems.cpp  __gameAbbr__GameSystems.hpp
Game/maps/: Template.map  map1.map
Game/project/: collision-types.json
Game/scripts/: build_android  run
Maps/: Template.map  TestMap.map
Raft/: raftfile.json
Src/$!GAME_NAME!$/$!GAME_ABBR!$Lib/: CMakeLists.txt
Src/$!GAME_NAME!$/$!GAME_ABBR!$Lib/Core/: $!GAME_ABBR!$AndroidFactory.cpp  $!GAME_ABBR!$AndroidFactory.hpp  $!GAME_ABBR!$DesktopFactory.cpp  $!GAME_ABBR!$DesktopFactory.hpp  $!GAME_ABBR!$Game.cpp  $!GAME_ABBR!$Game.hpp  $!GAME_ABBR!$PlatformFactory.hpp  $!GAME_NAME!$Game.cpp  AndroidPlatform.hpp  DesktopPlatform.hpp  PlatformBase.hpp
Src/$!GAME_NAME!$/$!GAME_ABBR!$Lib/Input/: $!GAME_ABBR!$InputHandler.cpp  $!GAME_ABBR!$InputHandler.hpp  $!GAME_NAME!$InputHandler.hpp  GameKeyboard.cpp  GameKeyboard.hpp  GameTouch.cpp  GameTouch.hpp
Src/$!GAME_NAME!$/$!GAME_ABBR!$Lib/Screens/: TestScreen.cpp  TestScreen.hpp
Src/$!GAME_NAME!$/$!GAME_ABBR!$Lib/Systems/: $!GAME_ABBR!$GameSystems.cpp  $!GAME_ABBR!$GameSystems.hpp  $!GAME_NAME!$GameSystems.cpp  $!GAME_NAME!$GameSystems.hpp
Src/$!GAME_NAME!$/$!GAME_NAME!$Lib/: CMakeLists.txt
Src/$!GAME_NAME!$/$!GAME_NAME!$Lib/Core/: $!GAME_NAME!$Game.cpp  $!GAME_NAME!$Game.hpp  AndroidPlatform.hpp  DesktopPlatform.hpp  PlatformBase.hpp
Src/$!GAME_NAME!$/$!GAME_NAME!$Lib/Input/: $!GAME_NAME!$InputHandler.cpp  $!GAME_NAME!$InputHandler.hpp  GameKeyboard.cpp  GameKeyboard.hpp  GameTouch.cpp  GameTouch.hpp
Src/$!GAME_NAME!$/$!GAME_NAME!$Lib/Screens/: TestScreen.cpp  TestScreen.hpp
Src/$!GAME_NAME!$/$!GAME_NAME!$Lib/Systems/: $!GAME_NAME!$GameSystems.cpp  $!GAME_NAME!$GameSystems.hpp
Src/__gameName__/__gameAbbr__Lib/Core/: __gameAbbr__DesktopFactory.cpp  __gameAbbr__DesktopFactory.hpp  __gameAbbr__Game.cpp  __gameAbbr__Game.hpp
Src/__gameName__/__gameAbbr__Lib/Input/: GameKeyboard.cpp  GameKeyboard.hpp  GameTouch.cpp  GameTouch.hpp  __gameAbbr__InputHandler.hpp
Src/__gameName__/__gameAbbr__Lib/Screens/: TestScreen.cpp  TestScreen.hpp
Src/__gameName__/__gameAbbr__Lib/Systems/: __gameAbbr__GameSystems.hpp
Src/__gameName__/__gameName__Lib/: CMakeLists.txt
Src/__gameName__/__gameName__Lib/Core/: __gameAbbr__AndroidFactory.hpp  __gameAbbr__Game.cpp
Src/__gameName__/__gameName__Lib/Systems/: __gameAbbr__GameSystems.cpp
System/: __systemName__System.cpp  __systemName__System.hpp  index.js
